KCM Locale: Fix date code conversion for common stems

Fix the KCM so that it checks for the longest date/time codes first when
converting between user visible codes and the real codes. This si
especially a problem in languages like German.

Distro's may want to backport to 4.7 and 4.6

BUG: 279174
FIXED-IN: 4.8.0